Code reformating and deleting comments